--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "codemirror": "^5.22.0",
     "coffeekraken-gridle": "git+ssh://git@github.com/Coffeekraken/gridle.git#release/2.0.49",
     "coffeekraken-s-custom-scrollbar-component": "git+ssh://git@github.com/Coffeekraken/s-custom-scrollbar-component.git#release/0.0.1",
-    "coffeekraken-s-interactive-demo-component": "git+https://git@github.com/Coffeekraken/s-interactive-demo-component.git#release/0.0.1",
-    "coffeekraken-s-activate-component": "git+https://git@github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
-    "coffeekraken-s-ripple-component": "git+https://git@github.com/Coffeekraken/s-ripple-component.git#release/0.0.1",
-    "coffeekraken-s-trianglify-component": "git+https://git@github.com/Coffeekraken/s-trianglify-component.git#release/0.0.1",
+    "coffeekraken-s-interactive-demo-component": "git+ssh://git@github.com/Coffeekraken/s-interactive-demo-component.git#release/0.0.1",
+    "coffeekraken-s-activate-component": "git+ssh://git@github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
+    "coffeekraken-s-ripple-component": "git+ssh://git@github.com/Coffeekraken/s-ripple-component.git#release/0.0.1",
+    "coffeekraken-s-trianglify-component": "git+ssh://git@github.com/Coffeekraken/s-trianglify-component.git#release/0.0.1",
     "coffeekraken-sugar": "git+ssh://git@github.com/Coffeekraken/sugar.git#release/0.0.1",
     "coffeekraken-compile-server": "git+ssh://git@github.com/Coffeekraken/compile-server.git#release/0.0.1",
     "coffeekraken-docblock-parser": "git+ssh://git@github.com:Coffeekraken/docblock-parser.git#release/0.0.1",
