--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "kraken"
   ],
   "author": "Coffeekraken <hello@coffeekraken.io>",
-  "contributors": [{
-    "name": "Olivier Bossel",
-    "email": "olivier.bossel@gmail.com",
-    "url": "http://olivierbossel.com"
-  }],
+  "contributors": [
+    {
+      "name": "Olivier Bossel",
+      "email": "olivier.bossel@gmail.com",
+      "url": "http://olivierbossel.com"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -65,15 +67,16 @@
   "dependencies": {
     "Faker": "^0.7.2",
     "codemirror": "^5.22.0",
+    "coffeekraken-compile-server": "https://github.com/Coffeekraken/compile-server.git#release/0.0.1",
+    "coffeekraken-docblock-parser": "https://github.com/Coffeekraken/docblock-parser.git#release/0.0.1",
     "coffeekraken-gridle": "https://github.com/Coffeekraken/gridle.git#release/2.0.49",
+    "coffeekraken-s-activate-component": "https://github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
     "coffeekraken-s-custom-scrollbar-component": "https://github.com/Coffeekraken/s-custom-scrollbar-component.git#release/0.0.1",
     "coffeekraken-s-interactive-demo-component": "https://github.com/Coffeekraken/s-interactive-demo-component.git#release/0.0.1",
-    "coffeekraken-s-activate-component": "https://github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
     "coffeekraken-s-ripple-component": "https://github.com/Coffeekraken/s-ripple-component.git#release/0.0.1",
     "coffeekraken-s-trianglify-component": "https://github.com/Coffeekraken/s-trianglify-component.git#release/0.0.1",
     "coffeekraken-sugar": "https://github.com/Coffeekraken/sugar.git#release/0.0.1",
-    "coffeekraken-compile-server": "https://github.com/Coffeekraken/compile-server.git#release/0.0.1",
-    "coffeekraken-docblock-parser": "https://github.com/Coffeekraken/docblock-parser.git#release/0.0.1",
+    "commander": "^2.9.0",
     "concurrently": "^3.1.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
