--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-es2015-node": "^6.1.1",
@@ -70,11 +71,12 @@
     "codemirror": "^5.22.0",
     "coffeekraken-compile-server": "https://github.com/Coffeekraken/compile-server.git#release/0.0.1",
     "coffeekraken-docblock-parser": "https://github.com/Coffeekraken/docblock-parser.git#release/0.0.1",
-    "coffeekraken-gridle": "https://github.com/Coffeekraken/gridle.git#release/2.0.49",
+    "coffeekraken-gridle": "https://github.com/Coffeekraken/gridle.git#release/3.0.0",
     "coffeekraken-s-activate-component": "https://github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
     "coffeekraken-s-custom-scrollbar-component": "https://github.com/Coffeekraken/s-custom-scrollbar-component.git#release/0.0.1",
     "coffeekraken-s-dialog-component": "https://github.com/Coffeekraken/s-dialog-component.git#release/0.0.1",
     "coffeekraken-s-interactive-demo-component": "https://github.com/Coffeekraken/s-interactive-demo-component.git#release/0.0.1",
+    "coffeekraken-s-codemirror-component": "https://github.com/Coffeekraken/s-codemirror-component.git#release/0.0.1",
     "coffeekraken-s-ripple-component": "https://github.com/Coffeekraken/s-ripple-component.git#release/0.0.1",
     "coffeekraken-s-trianglify-component": "https://github.com/Coffeekraken/s-trianglify-component.git#release/0.0.1",
     "coffeekraken-sugar": "https://github.com/Coffeekraken/sugar.git#release/0.0.1",
