--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeekraken-carpenter",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Powerful tool that provide a nice web interface to display your website styleguide and modules/plugins documentations in one place.",
   "main": "dist/index.js",
   "homepage": "http://coffeekraken.io",
@@ -69,17 +69,15 @@
     "Faker": "^0.7.2",
     "babel-polyfill": "^6.23.0",
     "codemirror": "^5.22.0",
-    "coffeekraken-compile-server": "https://github.com/Coffeekraken/compile-server.git#release/0.0.1",
-    "coffeekraken-docblock-parser": "https://github.com/Coffeekraken/docblock-parser.git#release/0.0.1",
-    "coffeekraken-gridle": "https://github.com/Coffeekraken/gridle.git#release/3.0.0",
-    "coffeekraken-s-activate-component": "https://github.com/Coffeekraken/s-activate-component.git#release/0.0.1",
-    "coffeekraken-s-custom-scrollbar-component": "https://github.com/Coffeekraken/s-custom-scrollbar-component.git#release/0.0.1",
-    "coffeekraken-s-dialog-component": "https://github.com/Coffeekraken/s-dialog-component.git#release/0.0.1",
-    "coffeekraken-s-interactive-demo-component": "https://github.com/Coffeekraken/s-interactive-demo-component.git#release/0.0.1",
-    "coffeekraken-s-codemirror-component": "https://github.com/Coffeekraken/s-codemirror-component.git#release/0.0.1",
-    "coffeekraken-s-ripple-component": "https://github.com/Coffeekraken/s-ripple-component.git#release/0.0.1",
-    "coffeekraken-s-trianglify-component": "https://github.com/Coffeekraken/s-trianglify-component.git#release/0.0.1",
-    "coffeekraken-sugar": "https://github.com/Coffeekraken/sugar.git#release/0.0.1",
+    "coffeekraken-compile-server": "^1.0.0",
+    "coffeekraken-docblock-parser": "0.0.2",
+    "coffeekraken-gridle": "^3.0.0-rc.1",
+    "coffeekraken-s-activate-component": "^1.0.1",
+    "coffeekraken-s-dialog-component": "^1.0.1",
+    "coffeekraken-s-interactive-demo-component": "^1.0.1",
+    "coffeekraken-s-codemirror-component": "^1.0.1",
+    "coffeekraken-s-ripple-component": "^1.0.1",
+    "coffeekraken-sugar": "^1.0.0",
     "commander": "^2.9.0",
     "concurrently": "^3.1.0",
     "express": "^4.14.0",
