fix: fix config extend by using deep-extend in place of _merge to avoid array merging

--- a/package.json
+++ b/package.json
@@ -75,13 +75,14 @@
     "coffeekraken-docblock-parser": "0.0.2",
     "coffeekraken-gridle": "^3.0.0-rc.1",
     "coffeekraken-s-activate-component": "^1.0.1",
+    "coffeekraken-s-codemirror-component": "^1.0.1",
     "coffeekraken-s-dialog-component": "^1.0.1",
     "coffeekraken-s-interactive-demo-component": "^1.0.1",
-    "coffeekraken-s-codemirror-component": "^1.0.1",
     "coffeekraken-s-ripple-component": "^1.0.1",
     "coffeekraken-sugar": "^1.0.0",
     "commander": "^2.9.0",
     "concurrently": "^3.1.0",
+    "deep-extend": "^0.5.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "fs-readdir-recursive": "^1.0.0",
