--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeekraken-carpenter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Powerful tool that provide a nice web interface to display your website styleguide and modules/plugins documentations in one place.",
   "main": "dist/index.js",
   "homepage": "http://coffeekraken.io",
@@ -70,6 +70,7 @@
   "dependencies": {
     "Faker": "^0.7.2",
     "babel-polyfill": "^6.23.0",
+    "basic-auth-connect": "^1.0.0",
     "codemirror": "^5.22.0",
     "coffeekraken-compile-server": "^1.0.0",
     "coffeekraken-docblock-parser": "0.0.2",
