--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeekraken-carpenter",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Powerful tool that provide a nice web interface to display your website styleguide and modules/plugins documentations in one place.",
   "main": "dist/index.js",
   "homepage": "http://coffeekraken.io",
@@ -11,19 +11,30 @@
   "bin": {
     "coffeekraken-carpenter": "./bin/coffeekraken-carpenter"
   },
+  "watch": {
+    "assets:css": {
+      "paths": "public/assets-src/sass/**/*.scss"
+    },
+    "assets:js": {
+      "paths": "public/assets-src/js/**/*.js"
+    },
+    "assets:img": {
+      "paths": "public/assets-src/img/**/*"
+    },
+    "dist:js": {
+      "paths": "src/**/*.js"
+    }
+  },
   "scripts": {
-    "assets": "npm run assets.css && npm run assets.js && npm run assets.img",
-    "assets.css": "node-sass public/assets-src/sass/style.scss public/assets/css/style.css --include-path node_modules --output-style expanded",
-    "assets.js": "webpack",
-    "assets.img": "imagemin public/assets-src/img/* --out-dir=public/assets/img",
-    "assets.watch": "concurrently --kill-others \"npm run assets.watch.css\" \"npm run assets.watch.js\"",
-    "assets.watch.css": "nodemon -w public/assets-src -e scss -x \"npm run assets.css\"",
-    "assets.watch.js": "nodemon -w public/assets-src -e js -x \"npm run assets.js\"",
-    "assets.watch.img": "nodemon -w public/assets-src/img  -x \"npm run assets.img\"",
-    "dist": "babel src -d dist",
-    "dist.watch": "nodemon -w src -e js -x \"npm run dist\"",
-    "start": "concurrently --kill-others \"npm run assets.watch\" \"npm run dist.watch\" \"nodemon ./bin/coffeekraken-carpenter\"",
+    "assets": "npm run assets:css && npm run assets:js && npm run assets:img",
+    "assets:css": "node-sass public/assets-src/sass/style.scss public/assets/css/style.css --include-path node_modules --output-style expanded",
+    "assets:js": "webpack",
+    "assets:img": "imagemin public/assets-src/img/* --out-dir=public/assets/img",
+    "dist": "npm run dist:js",
+    "dist:js": "babel src -d dist",
+    "start": "coffeekraken-scripts-stack -i start -i assets -i dist",
     "test": "coffeekraken-testing-stack",
+    "carpenter": "./bin/coffeekraken-carpenter",
     "changelog": "git-changelog --version_name $npm_package_version  --app_name $npm_package_name --intro \"$npm_package_description\" --logo \".resources/coffeekraken-logo.jpg\""
   },
   "keywords": [
@@ -51,24 +62,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-loose": "^8.0.0",
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "coffeekraken-scripts-stack": "^1.0.1",
     "git-changelog": "^1.1.2",
     "imagemin-cli": "^3.0.0",
     "node-sass": "^3.13.0",
     "nodemon": "^1.11.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.3"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.1.4"
   },
   "dependencies": {
-    "faker": "^4.0.0",
     "babel-polyfill": "^6.23.0",
     "basic-auth-connect": "^1.0.0",
     "codemirror": "^5.22.0",
@@ -76,16 +87,21 @@
     "coffeekraken-docblock-parser": "0.0.2",
     "coffeekraken-gridle": "^3.0.0-rc.1",
     "coffeekraken-s-activate-component": "^1.0.1",
+    "coffeekraken-s-button-component": "^1.0.0",
     "coffeekraken-s-codemirror-component": "^1.0.1",
     "coffeekraken-s-dialog-component": "^1.0.1",
     "coffeekraken-s-interactive-demo-component": "^1.0.1",
     "coffeekraken-s-ripple-component": "^1.0.1",
+    "coffeekraken-s-select-component": "^1.0.2",
+    "coffeekraken-s-table-component": "^1.0.0",
+    "coffeekraken-s-tooltip-component": "^1.0.1",
     "coffeekraken-sugar": "^1.0.0",
     "commander": "^2.9.0",
-    "concurrently": "^3.1.0",
     "deep-extend": "^0.5.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "faker": "^4.0.0",
+    "flattenkeys": "^1.0.0",
     "fs-readdir-recursive": "^1.0.0",
     "glob": "^7.1.1",
     "glob-all": "^3.1.0",
