--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffeekraken-carpenter",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Powerful tool that provide a nice web interface to display your website styleguide and modules/plugins documentations in one place.",
   "main": "dist/index.js",
   "homepage": "http://coffeekraken.io",
@@ -85,7 +85,7 @@
     "codemirror": "^5.22.0",
     "coffeekraken-compile-server": "^1.0.0",
     "coffeekraken-docblock-parser": "0.0.2",
-    "coffeekraken-gridle": "^3.0.0-rc.1",
+    "coffeekraken-gridle": "^3.0.0",
     "coffeekraken-s-activate-component": "^1.0.1",
     "coffeekraken-s-button-component": "^1.0.0",
     "coffeekraken-s-codemirror-component": "^1.0.1",
