--- a/package.json
+++ b/package.json
@@ -109,13 +109,15 @@
     "glob": "^7.1.1",
     "glob-all": "^3.1.0",
     "gravatar-url": "^2.0.0",
+    "handlebars": "^4.0.6",
     "htmlspecialchars": "^1.0.5",
     "imagemin": "^5.2.2",
-    "handlebars": "^4.0.6",
+    "interactjs": "^1.3.4",
     "lodash": "^4.17.2",
     "marked": "^0.3.6",
     "material-prism-theme": "^0.1.0",
     "md5": "^2.2.1",
+    "node-watch": "^0.5.8",
     "open": "0.0.5",
     "prismjs": "^1.6.0",
     "require-text": "^0.0.1",
