--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "htmlspecialchars": "^1.0.5",
     "imagemin": "^5.2.2",
     "interactjs": "^1.3.4",
+    "js-yaml": "^3.12.0",
     "lodash": "^4.17.2",
     "marked": "^0.3.6",
     "material-prism-theme": "^0.1.0",
