--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "imagemin": "^5.2.2",
     "interactjs": "^1.3.4",
     "js-yaml": "^3.12.0",
+    "json-schema-ref-parser": "^5.1.2",
     "lodash": "^4.17.2",
     "marked": "^0.3.6",
     "material-prism-theme": "^0.1.0",
